# tinyland-kdbx

./: flake.nix  pyproject.toml
tinyland_kdbx/: __init__.py  __main__.py  base58.py  cli.py  reader.py
tinyland_kdbx/tests/: test_base58.py  test_cli.py
