[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyland-kdbx"
version = "0.1.0"
description = "Native KeePassXC KDBX reader with base58 transport"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "John Sullivan"},
]

dependencies = [
    "pykeepass>=4.0.7",
    "pycryptodome>=3.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
tinyland-kdbx = "tinyland_kdbx.cli:main"

[tool.setuptools.packages.find]
include = ["tinyland_kdbx*"]

[tool.pytest.ini_options]
testpaths = ["tinyland_kdbx/tests"]
